syntax = "proto3";
option go_package = ".";
package proto;
// Build command:
//  protoc --go_out=. --go-grpc_out=. message.proto
//  protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:. Message.proto
message Message {
  bool isReply = 1;
  int64 Timestamp = 2;
  int32 Process_id = 3;
}

service MessageService{
  rpc MessageService(Message) returns (Message) {};
  rpc StartNetworkService(Message) returns (Message) {};
}